[tool.poetry]
name = "python-geetest3-click"
version = "1.0.0"
description = "极验3代点字"
authors = ["Hobr"]
license = "GPL3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
httpx = {extras = ["http2", "socks"], version = "^0.27.0"}
loguru = "^0.7.2"
bili-ticket-gt-python = "^0.2.2"
pycryptodome = "^3.20.0"
ruff = "^0.5.0"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["B", "C4", "C9", "E", "F", "I", "PL", "S", "SIM", "U", "W", "YTT"]
ignore = ["B006", "S311"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 8
allow-magic-value-types = ["int","str"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
